hphp/test/zend/good/Zend/tests/use_function/includes/foo_bar.php
<?hh

namespace foo;

function bar() {
    return 'local bar';
}
